[tool.poetry]
name = "implicit_q_learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
d4rl = { git = "https://github.com/juliusfrost/d4rl.git", rev = "7ffa6a80ff1a06f43a1e633bebca021a8c9125ac" }
scipy = "^1.8.1"
absl-py = "^1.2.0"
gym = { version = "~0.24.0", extras = ["mujoco"] }
gdown = "^4.5.1"
tqdm = "^4.64.0"
flax = "^0.5.2"
jax = "^0.3.14"
ml-collections = "^0.1.1"
optax = "^0.1.3"
tensorboardX = "^2.5.1"
tensorflow-probability = "^0.17.0"
imageio = "^2.19.5"
imageio-ffmpeg = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
