[tool.poetry]
name = "implicit_q_learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
d4rl = { git = "https://github.com/Farama-Foundation/D4RL.git", rev = "f2a05c0d66722499bf8031b094d9af3aea7c372b" }
scipy = "^1.8.1"
absl-py = "^1.2.0"
gym = "0.23.1"
gdown = "^4.5.1"
tqdm = "^4.64.0"
flax = "^0.5.2"
jax = { version = "<0.3.5", extras = ["cuda"] }
ml-collections = "^0.1.1"
optax = "^0.1.3"
tensorboardX = "^2.5.1"
tensorflow-probability = "^0.17.0"
imageio = "^2.19.5"
imageio-ffmpeg = "^0.4.7"
mujoco-py = "^2.1.2"

[tool.poetry.dev-dependencies]
tensorboard = "^2.10.0"

[[tool.poetry.source]]
name = "jorenham/jax_pep503"
url = "https://jorenham.github.io/jax_pep503/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
